# pibell

./: .gitignore  ReadME.md  config_ex.yaml  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
fletbell/: animate.py  app.py  calculator.py  const.py  core.py  main.py  utiils.py
fletbell/models/: __init__.py  memory.py  models.py
fletbell/pages/: controlpage.py  mainpage.py  pinpad.py
fletbell/widgets/: buttons.py
test/: run.py
tests/: icon_browser.py
